--- a/telleboapp/src/app/restaurar/restaurar.page.html
+++ b/telleboapp/src/app/restaurar/restaurar.page.html
@@ -26,22 +26,27 @@
       <ion-card-header >
        
         <ion-card-title>Restaurar Contraseña</ion-card-title>
-        <ion-card-subtitle>Indique su correo</ion-card-subtitle>
+        <ion-card-subtitle>Indique su Usuario</ion-card-subtitle>
       </ion-card-header>
     
       <ion-card-content>
         <ion-item>
-          <!-- <ion-input formControlName="email" type="email" [(ngModel)]="email"></ion-input> -->
-          <ion-input type="text" maxlength="12" minlength="6"   pattern="[a-zA-Z0-9]*" label="Usuario" placeholder="Ingresar Usuario"></ion-input>
+          <ion-input type="text" maxlength="12" minlength="6"   pattern="[a-zA-Z0-9]*" [(ngModel)]="userForm.usuario" label="Usuario" placeholder="Ingresar Usuario"></ion-input>
         </ion-item>
 
       <br>
      
 
 
-          <ion-button expand="block" >Log IN</ion-button>
+      <ion-button expand="block"  (click)="enviar()">Enviar</ion-button>
 
       </ion-card-content>
     </ion-card>
   </div>
+  <ion-alert
+  
+  header="Error"
+  message="Por favor, llene todos los campos."
+  [buttons]="botonalerta"
+></ion-alert>
 </ion-content>
