--- a/telleboapp/src/app/home/home.page.html
+++ b/telleboapp/src/app/home/home.page.html
@@ -2,6 +2,10 @@
   <ion-toolbar>
   
     <ion-title>
+      <ion-button (click)="goBack()" color="light">
+        <ion-icon slot="start" name="arrow-back"></ion-icon>
+         Home
+      </ion-button>
      
     </ion-title>
   </ion-toolbar>
