--- a/telleboapp/src/app/bienvenida/bienvenida.page.html
+++ b/telleboapp/src/app/bienvenida/bienvenida.page.html
@@ -1,13 +1,29 @@
-<ion-header [translucent]="true">
+<ion-header>
   <ion-toolbar>
-    <ion-title>bienvenida</ion-title>
+    <ion-title>Bienvenido a Te Llevo App</ion-title>
   </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">bienvenida</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content class="ion-padding">
+  <img class="imagen" src="/assets/icon/coche-sedan-rojo-estilo-dibujos-animados-aislado-sobre-fondo-blanco_1308-64900.avif" alt="Imagen de fondo">
+  <ion-grid class="ion-text-center ion-justify-content-center ion-align-items-center" style="height: 100%;">
+    <ion-row>
+      <ion-col size="12">
+        <h1>Te Llevo App</h1>
+        <p>Tu solución confiable para moverte rápidamente por la ciudad.</p>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="12">
+        <ion-button expand="block" size="large" href="/home">Iniciar Sesión</ion-button>
+      </ion-col>
+    </ion-row>
+
+    <ion-row>
+      <ion-col size="12">
+        <ion-button expand="block" size="large" href="/restaurar" color="secondary">Restablecer Contraseña</ion-button>
+      </ion-col>
+    </ion-row>
+  </ion-grid>
 </ion-content>
